--- a/SherpaDesk/Info.xaml
+++ b/SherpaDesk/Info.xaml
@@ -283,34 +283,81 @@
         <Frame x:Name="LeftFrame" VerticalAlignment="Top" Grid.Column="0" Margin="0,0,0,0" />
         <Frame x:Name="ActivityFrame" VerticalAlignment="Top" Grid.Column="2" Margin="0,0,0,0" />
         <Frame x:Name="RightFrame" VerticalAlignment="Top" Grid.Column="3" Margin="0,0,0,0" />
-        <Grid Grid.Column="1" VerticalAlignment="Stretch" Canvas.ZIndex="1">
+        <Grid Grid.Column="1" Canvas.ZIndex="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="190" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
-            <telerik:RadCustomHubTile Grid.Column="0" HorizontalAlignment="Right" Height="150" VerticalAlignment="Bottom" Width="150" Background="#CCE9EDEF">
+            <Grid Grid.Column="1" Grid.RowSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Grid Width="800" Height="500" HorizontalAlignment="Left" Margin="30,100,30,30" VerticalAlignment="Top">
+                    <Grid.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="#72585858"/>
+                            <GradientStop Color="#19040040" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Grid.Background>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <Grid Width="auto" HorizontalAlignment="Center">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="30" FontSize="180" Height="auto" HorizontalAlignment="Center" />
+                        <TextBlock Text="Open Tickets" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
+                        <Image Grid.Column="1" HorizontalAlignment="Left" Margin="60,20,60,0" VerticalAlignment="Center" Source="Assets/Images/home-line-devider.png"/>
+                        <Grid Grid.Column="2" Height="auto" VerticalAlignment="Center" Margin="0,25,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />                                
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                            </Grid.RowDefinitions>
+                            <TextBlock Text="7" FontSize="45" HorizontalAlignment="Right" />
+                            <TextBlock Text="3" Grid.Row="1" FontSize="45" HorizontalAlignment="Right" />
+                            <TextBlock Text="5" Grid.Row="2" FontSize="45" HorizontalAlignment="Right" />
+                            <TextBlock Text="As User" Margin="5,0,0,4" Grid.Column="1" FontSize="30" VerticalAlignment="Bottom" />
+                            <TextBlock Text="As Tech" Margin="5,0,0,4" Grid.Column="1" Grid.Row="1" FontSize="30" VerticalAlignment="Bottom" />
+                            <TextBlock Text="Alt Tech" Margin="5,0,0,4" Grid.Column="1" Grid.Row="2" FontSize="30" VerticalAlignment="Bottom" />
+                        </Grid>
+                    </Grid>
+                </Grid>
+            </Grid>
+            <telerik:RadCustomHubTile Grid.Column="0" HorizontalAlignment="Right" Margin="0,100,5,5" Height="150" VerticalAlignment="Top" Width="150" Background="#D8E9EDEF">
                 <telerik:RadCustomHubTile.FrontContent>
                     <StackPanel Margin="0,0,0,0" VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                        <TextBlock Text="+Time" FontSize="29" Margin="0,0,10,10" Foreground="#FF7395A4" FontWeight="Bold"/>
+                        <TextBlock Text="+Time" FontSize="28" Margin="0,0,10,0" Foreground="#FF7395A4" FontWeight="Bold"/>
                     </StackPanel>
                 </telerik:RadCustomHubTile.FrontContent>
             </telerik:RadCustomHubTile>
-            <telerik:RadCustomHubTile Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Height="150" Margin="20,20,5,20" VerticalAlignment="Center" Width="150" Background="#CCE9EDEF">
+            <telerik:RadCustomHubTile Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Height="150" Margin="0,25,5,5" Width="150" Background="#D8E9EDEF">
                 <telerik:RadCustomHubTile.FrontContent>
                     <StackPanel Margin="0,0,0,0" VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                        <TextBlock Text="+Ticket" FontSize="29" Margin="0,0,10,10" Foreground="#FF7395A4" FontWeight="Bold"/>
+                        <TextBlock Text="+Ticket" FontSize="28" Margin="0,0,10,0" Foreground="#FF7395A4" FontWeight="Bold"/>
                     </StackPanel>
                 </telerik:RadCustomHubTile.FrontContent>
             </telerik:RadCustomHubTile>
-            <telerik:RadCustomHubTile Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" Height="150" VerticalAlignment="Top" Width="150" Background="#CCE9EDEF">
+            <telerik:RadCustomHubTile Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" Height="150" Margin="0,25,5,5" VerticalAlignment="Top" Width="150" Background="#D8E9EDEF">
                 <telerik:RadCustomHubTile.FrontContent>
                     <StackPanel Margin="0,0,0,0" VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                        <TextBlock Text="Messages" FontSize="29" Margin="0,0,10,10" Foreground="#FF7395A4" FontWeight="Bold"/>
+                        <TextBlock Text="Messages" FontSize="28" Margin="0,0,10,0" Foreground="#FF7395A4" FontWeight="Bold"/>
                     </StackPanel>
                 </telerik:RadCustomHubTile.FrontContent>
             </telerik:RadCustomHubTile>
