--- a/SherpaDesk/Styles/StandardStyles.xaml
+++ b/SherpaDesk/Styles/StandardStyles.xaml
@@ -178,7 +178,7 @@
     </Style>
 
     <Style x:Key="HeaderTextStyle" TargetType="TextBlock" BasedOn="{StaticResource BaselineTextStyle}">
-        <Setter Property="FontSize" Value="56"/>
+        <Setter Property="FontSize" Value="50"/>
         <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="LineHeight" Value="40"/>
         <Setter Property="RenderTransform">
@@ -1503,7 +1503,7 @@
         <Setter Property="TextWrapping" Value="NoWrap"/>
         <Setter Property="VerticalAlignment" Value="Bottom"/>
         <Setter Property="Margin" Value="0,0,30,40"/>
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="#FF86ABB6"/>
     </Style>
 
     <Style x:Key="PageSubheaderTextStyle" TargetType="TextBlock" BasedOn="{StaticResource SubheaderTextStyle}">
