--- a/SherpaDesk/Styles/StandardStyles.xaml
+++ b/SherpaDesk/Styles/StandardStyles.xaml
@@ -178,9 +178,9 @@
     </Style>
 
     <Style x:Key="HeaderTextStyle" TargetType="TextBlock" BasedOn="{StaticResource BaselineTextStyle}">
-        <Setter Property="FontSize" Value="50"/>
+        <Setter Property="FontSize" Value="34"/>
         <Setter Property="FontWeight" Value="Light"/>
-        <Setter Property="LineHeight" Value="40"/>
+        <Setter Property="LineHeight" Value="30"/>
         <Setter Property="RenderTransform">
             <Setter.Value>
                 <TranslateTransform X="-2" Y="8"/>
@@ -1501,7 +1501,7 @@
 
     <Style x:Key="PageHeaderTextStyle" TargetType="TextBlock" BasedOn="{StaticResource HeaderTextStyle}">
         <Setter Property="TextWrapping" Value="NoWrap"/>
-        <Setter Property="VerticalAlignment" Value="Bottom"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="0,0,30,40"/>
         <Setter Property="Foreground" Value="#FF86ABB6"/>
     </Style>
