--- a/SherpaDesk/Activity.xaml
+++ b/SherpaDesk/Activity.xaml
@@ -26,7 +26,7 @@
                     Visibility="Collapsed" 
                     VerticalAlignment="Top" 
                     SelectionMode="None" 
-                    Background="Transparent"
+                    Background="White"
                     Margin="0,0,0,20" 
                     Grid.Column="0" 
                     Grid.Row="1" 
