--- a/SherpaDesk/Timesheet.xaml
+++ b/SherpaDesk/Timesheet.xaml
@@ -103,22 +103,22 @@
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="auto" />
                     </Grid.RowDefinitions>
-                    <TextBlock HorizontalAlignment="left" Grid.Row="0" Margin="10,10,0,0" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Top" FontSize="24"/>
-                    <ComboBox Name="TechnicianList" Grid.Column="2" Grid.Row="0" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" SelectionChanged="TechnicianList_SelectionChanged" />
+                    <TextBlock HorizontalAlignment="left" Grid.Row="0" Margin="10,10,0,0" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Top" FontSize="18"/>
+                    <ComboBox Name="TechnicianList" Grid.Column="2" Grid.Row="0" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" SelectionChanged="TechnicianList_SelectionChanged" />
 
-                    <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,10,0,0" TextWrapping="Wrap" Text="Account" VerticalAlignment="Top" FontSize="24"/>
-                    <ComboBox Name="AccountList" Grid.Column="2" Grid.Row="1" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" SelectionChanged="AccountList_SelectionChanged" />
+                    <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,10,0,0" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Account" VerticalAlignment="Top" FontSize="18"/>
+                    <ComboBox Name="AccountList" Grid.Column="2" Grid.Row="1" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" SelectionChanged="AccountList_SelectionChanged" />
 
-                    <TextBlock Name="ProjectLabel" HorizontalAlignment="left" Grid.Row="2" Margin="10,10,0,0" TextWrapping="Wrap" Text="Project" VerticalAlignment="Top" FontSize="24"/>
-                    <ComboBox Name="ProjectList" Grid.Column="2" Grid.Row="2" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" SelectionChanged="ProjectList_SelectionChanged" />
+                    <TextBlock Name="ProjectLabel" HorizontalAlignment="left" Grid.Row="2" Foreground="#8eb1bb" Margin="10,10,0,0" TextWrapping="Wrap" Text="Project" VerticalAlignment="Top" FontSize="18"/>
+                    <ComboBox Name="ProjectList" Grid.Column="2" Grid.Row="2" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" SelectionChanged="ProjectList_SelectionChanged" />
 
-                    <TextBlock Name="TaskTypeLabel" HorizontalAlignment="left" Grid.Row="3" Margin="10,10,0,0" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Top" FontSize="24"/>
-                    <ComboBox Name="TaskTypeList" Grid.Column="2" Grid.Row="3" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
+                    <TextBlock Name="TaskTypeLabel" HorizontalAlignment="left" Grid.Row="3" Foreground="#8eb1bb" Margin="10,10,0,0" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Top" FontSize="18"/>
+                    <ComboBox Name="TaskTypeList" Grid.Column="2" Grid.Row="3" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
 
-                    <TextBlock HorizontalAlignment="left" Grid.Row="4" Margin="10,10,0,0" TextWrapping="Wrap" Text="Billable" VerticalAlignment="Top" FontSize="24"/>
+                    <TextBlock HorizontalAlignment="left" Grid.Row="4" Margin="10,10,0,0" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Billable" VerticalAlignment="Top" FontSize="18"/>
                     <CheckBox Name="BillableBox" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Column="2" Grid.Row="4" VerticalAlignment="Top" FontSize="20" IsChecked="True"/>
 
-                    <TextBlock HorizontalAlignment="left" Grid.Row="5" Margin="10,10,0,0" TextWrapping="Wrap" Text="Start Time" VerticalAlignment="Top" FontSize="24" />
+                    <TextBlock HorizontalAlignment="left" Grid.Row="5" Margin="10,10,0,0" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Start Time" VerticalAlignment="Top" FontSize="18" />
                     <Grid Grid.Column="2" Grid.Row="5" Margin="0,5,0,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto" />
@@ -129,7 +129,7 @@
                         <telerikInput:RadTimePicker x:Name="StartTimePicker" Grid.Column="2" Height="30" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="StartTimePicker_ValueChanged" />
                     </Grid>
 
-                    <TextBlock HorizontalAlignment="left" Grid.Row="6" Margin="10,10,0,0" TextWrapping="Wrap" Text="End Time" VerticalAlignment="Top" FontSize="24" />
+                    <TextBlock HorizontalAlignment="left" Grid.Row="6" Foreground="#8eb1bb" Margin="10,10,0,0" TextWrapping="Wrap" Text="End Time" VerticalAlignment="Top" FontSize="18" />
                     <Grid Grid.Column="2" Grid.Row="6" Margin="0,5,0,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto" />
@@ -140,11 +140,11 @@
                         <telerikInput:RadTimePicker x:Name="EndTimePicker" Grid.Column="2" Height="30" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="EndTimePicker_ValueChanged" />
                     </Grid>
 
-                    <TextBlock HorizontalAlignment="left" Grid.Row="7" Margin="10,10,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="24" />
+                    <TextBlock HorizontalAlignment="left" Foreground="#8eb1bb" Grid.Row="7" Margin="10,10,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="18" />
                     <TextBox x:Name="HoursTextBox" Margin="0,5,0,0" HorizontalAlignment="Left" Height="35" InputScope="NumberFullWidth" Text="0.00" Grid.Row="7" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" Width="130" />
                     <TextBlock x:Name="ErrorHours" Grid.Column="2" HorizontalAlignment="Left" Margin="0 0 0 0" Grid.Row="7" Height="50" VerticalAlignment="Top"/>
 
-                    <TextBlock HorizontalAlignment="left" Grid.Row="8" Margin="10,10,0,0" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" FontSize="24" />
+                    <TextBlock HorizontalAlignment="left" Foreground="#8eb1bb" Grid.Row="8" Margin="10,10,0,0" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" FontSize="18" />
                     <TextBox x:Name="NoteTextBox" Margin="0,5,0,0" HorizontalAlignment="Stretch" Height="100" InputScope="NumberFullWidth" Grid.Row="8" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" />
 
                     <Button Content="Save Time" Grid.Column="0" HorizontalAlignment="Left" Margin="0,14,0,0" Padding="0,0,0,3" Grid.ColumnSpan="3" Grid.Row="9" VerticalAlignment="Top" Height="50" Grid.RowSpan="2" Width="200" FontSize="24" Background="#FF2F9129" Click="Button_Click" />
