--- a/SherpaDesk/Timesheet.xaml
+++ b/SherpaDesk/Timesheet.xaml
@@ -26,7 +26,7 @@
         * Row 0 contains the back button and page title
         * Row 1 contains the rest of the page layout
     -->
-    <Grid Style="{StaticResource LayoutRootStyle}" Background="Transparent">
+    <Grid Style="{StaticResource LayoutRootStyle}" Background="White" VerticalAlignment="Stretch">
         <Grid.Resources>
             <model:TimesheetViewModel x:Key="Model" x:Name="Model" />
         </Grid.Resources>
@@ -63,7 +63,7 @@
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
             <telerikInput:RadCalendar SelectionMode="Single" x:Name="TimesheetCalendar" Margin="0,0,0,28" 
-                RequestedTheme="Light" Background="White" VerticalAlignment="Bottom" Height="500" 
+                RequestedTheme="Light" Background="White" VerticalAlignment="Top" Height="500" 
                                       SelectionChanged="TimesheetCalendar_SelectionChanged"
                                       CellStyleSelector="{StaticResource selector}"  
                                       DataContext="{StaticResource Model}" 
@@ -80,10 +80,6 @@
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <TextBlock x:Name="DateLabel" Grid.Column="0" FontSize="40" />
-                <telerikInput:RadDatePicker x:Name="DateField" Grid.Column="2" Height="60" Width="30" FontSize="40" Grid.Row="0" DisplayValueFormat="dddd, MMMM dd, yyyy" 
-                                            ItemLength="90" Margin="1,-10,0,0" Grid.ColumnSpan="2" ValueChanged="DateField_ValueChanged" />
-
                 <Grid Grid.Row="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Width="570">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
@@ -102,52 +98,60 @@
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
                     </Grid.RowDefinitions>
-                    <TextBlock HorizontalAlignment="left" Grid.Row="0" Margin="10,10,0,0" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Top" FontSize="18"/>
-                    <ComboBox Name="TechnicianList" Grid.Column="2" Grid.Row="0" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" SelectionChanged="TechnicianList_SelectionChanged" />
+                    <TextBlock HorizontalAlignment="Right" Grid.Row="0" Margin="10,5,0,5" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Date" VerticalAlignment="Center" FontSize="18"/>
+                    <TextBlock x:Name="DateLabel" Grid.Column="2" FontSize="20" Margin="0,4,0,0" />
 
-                    <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,10,0,0" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Account" VerticalAlignment="Top" FontSize="18"/>
-                    <ComboBox Name="AccountList" Grid.Column="2" Grid.Row="1" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" SelectionChanged="AccountList_SelectionChanged" />
+                    <TextBlock HorizontalAlignment="Right" Grid.Row="1" Margin="10,5,0,5" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Center" FontSize="18"/>
+                    <ComboBox Name="TechnicianList" Grid.Column="2" Grid.Row="1" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="-10,-5,0,0" SelectionChanged="TechnicianList_SelectionChanged" RequestedTheme="Dark" />
 
-                    <TextBlock Name="ProjectLabel" HorizontalAlignment="left" Grid.Row="2" Foreground="#8eb1bb" Margin="10,10,0,0" TextWrapping="Wrap" Text="Project" VerticalAlignment="Top" FontSize="18"/>
-                    <ComboBox Name="ProjectList" Grid.Column="2" Grid.Row="2" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" SelectionChanged="ProjectList_SelectionChanged" />
+                    <TextBlock HorizontalAlignment="Right" Grid.Row="2" Margin="10,5,0,5" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Account" VerticalAlignment="Center" FontSize="18"/>
+                    <ComboBox Name="AccountList" Grid.Column="2" Grid.Row="2" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="-10,-5,0,0" SelectionChanged="AccountList_SelectionChanged" RequestedTheme="Dark" />
 
-                    <TextBlock Name="TaskTypeLabel" HorizontalAlignment="left" Grid.Row="3" Foreground="#8eb1bb" Margin="10,10,0,0" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Top" FontSize="18"/>
-                    <ComboBox Name="TaskTypeList" Grid.Column="2" Grid.Row="3" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
+                    <TextBlock Name="ProjectLabel" HorizontalAlignment="Right" Grid.Row="3" Foreground="#8eb1bb" Margin="10,5,0,5" TextWrapping="Wrap" Text="Project" VerticalAlignment="Center" FontSize="18"/>
+                    <ComboBox Name="ProjectList" Grid.Column="2" Grid.Row="3" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="-10,-5,0,0" SelectionChanged="ProjectList_SelectionChanged" RequestedTheme="Dark" />
 
-                    <TextBlock HorizontalAlignment="left" Grid.Row="4" Margin="10,10,0,0" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Billable" VerticalAlignment="Top" FontSize="18"/>
-                    <CheckBox Name="BillableBox" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Column="2" Grid.Row="4" VerticalAlignment="Top" FontSize="20" IsChecked="True"/>
+                    <TextBlock Name="TaskTypeLabel" HorizontalAlignment="Right" Grid.Row="4" Foreground="#8eb1bb" Margin="0,5,0,5" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Center" FontSize="18"/>
+                    <ComboBox Name="TaskTypeList" Grid.Column="2" Grid.Row="4" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="-10,-5,0,0" RequestedTheme="Dark" />
 
-                    <TextBlock HorizontalAlignment="left" Grid.Row="5" Margin="10,10,0,0" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Start Time" VerticalAlignment="Top" FontSize="18" />
-                    <Grid Grid.Column="2" Grid.Row="5" Margin="0,5,0,0">
+                    <TextBlock HorizontalAlignment="Right" Grid.Row="5" Margin="10,5,0,5" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Billable" VerticalAlignment="Center" FontSize="18"/>
+                    <CheckBox Name="BillableBox" HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Column="2" Grid.Row="5" VerticalAlignment="Top" FontSize="20" IsChecked="True"/>
+
+                    <TextBlock HorizontalAlignment="Right" Grid.Row="6" Margin="10,5,0,5" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Start Time" VerticalAlignment="Center" FontSize="18" />
+                    <Grid Grid.Column="2" Grid.Row="6" Margin="0,0,0,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto" />
                             <ColumnDefinition Width="10" />
                             <ColumnDefinition Width="auto" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock x:Name="StartTimeLabel" Grid.Column="0" FontSize="24" VerticalAlignment="Top" Margin="0,5,0,0" />
-                        <telerikInput:RadTimePicker x:Name="StartTimePicker" Grid.Column="2" Height="30" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="StartTimePicker_ValueChanged" />
+                        <TextBlock x:Name="StartTimeLabel" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Margin="0,0,0,0" />
+                        <telerikInput:RadTimePicker x:Name="StartTimePicker" Grid.Column="2" Height="30" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="StartTimePicker_ValueChanged" RequestedTheme="Dark" />
                     </Grid>
 
-                    <TextBlock HorizontalAlignment="left" Grid.Row="6" Foreground="#8eb1bb" Margin="10,10,0,0" TextWrapping="Wrap" Text="End Time" VerticalAlignment="Top" FontSize="18" />
-                    <Grid Grid.Column="2" Grid.Row="6" Margin="0,5,0,0">
+                    <TextBlock HorizontalAlignment="Right" Grid.Row="7" Foreground="#8eb1bb" Margin="10,5,0,5" TextWrapping="Wrap" Text="End Time" VerticalAlignment="Center" FontSize="18" />
+                    <Grid Grid.Column="2" Grid.Row="7" Margin="0,0,0,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto" />
                             <ColumnDefinition Width="10" />
                             <ColumnDefinition Width="auto" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock x:Name="EndTimeLabel" Grid.Column="0" FontSize="24" VerticalAlignment="Top" Margin="0,5,0,0" />
-                        <telerikInput:RadTimePicker x:Name="EndTimePicker" Grid.Column="2" Height="30" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="EndTimePicker_ValueChanged" />
+                        <TextBlock x:Name="EndTimeLabel" Grid.Column="0" FontSize="20" VerticalAlignment="Center" Margin="0,0,0,0" />
+                        <telerikInput:RadTimePicker x:Name="EndTimePicker" Grid.Column="2" Height="30" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="EndTimePicker_ValueChanged" RequestedTheme="Dark" />
                     </Grid>
 
-                    <TextBlock HorizontalAlignment="left" Foreground="#8eb1bb" Grid.Row="7" Margin="10,10,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="18" />
-                    <TextBox x:Name="HoursTextBox" Margin="0,5,0,0" HorizontalAlignment="Left" Height="35" InputScope="NumberFullWidth" Text="0.00" Grid.Row="7" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" Width="130" />
-                    <TextBlock x:Name="ErrorHours" Grid.Column="2" HorizontalAlignment="Left" Margin="0 0 0 0" Grid.Row="7" Height="50" VerticalAlignment="Top"/>
+                    <TextBlock HorizontalAlignment="Right" Foreground="#8eb1bb" Grid.Row="8" Margin="10,5,0,5" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Center" FontSize="18" />
+                    <TextBox x:Name="HoursTextBox" Margin="0,5,0,0" HorizontalAlignment="Left" Height="35" InputScope="NumberFullWidth" Text="0.00" Grid.Row="8" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" Width="130" />
+                    <TextBlock x:Name="ErrorHours" Grid.Column="2" HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Row="8" Height="50" VerticalAlignment="Top"/>
 
-                    <TextBlock HorizontalAlignment="left" Foreground="#8eb1bb" Grid.Row="8" Margin="10,10,0,0" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" FontSize="18" />
-                    <TextBox x:Name="NoteTextBox" Margin="0,5,0,0" HorizontalAlignment="Stretch" Height="100" InputScope="NumberFullWidth" Grid.Row="8" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" />
+                    <TextBlock HorizontalAlignment="Right" Foreground="#8eb1bb" Grid.Row="9" Margin="10,5,0,5" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Center" FontSize="18" />
+                    <TextBox x:Name="NoteTextBox" Margin="0,0,0,0" HorizontalAlignment="Stretch" Height="100" InputScope="NumberFullWidth" Grid.Row="9" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" />
 
-                    <Button Content="Save Time" Grid.Column="0" HorizontalAlignment="Left" Margin="0,14,0,0" Padding="0,0,0,3" Grid.ColumnSpan="3" Grid.Row="9" VerticalAlignment="Top" Height="50" Grid.RowSpan="2" Width="200" FontSize="24" Background="#FF2F9129" Click="Button_Click" />
+                    <Button Content="Save Time" Grid.Column="2" Foreground="White" HorizontalAlignment="Left" Margin="-3,14,0,0" Padding="0,0,0,0" Grid.Row="10" VerticalAlignment="Top" Height="50" Grid.RowSpan="2" Width="200" FontSize="24" Click="Button_Click">
+                        <Button.Background>
+                            <ImageBrush ImageSource="Assets/Images/button.png" />
+                        </Button.Background>
+                    </Button>
                 </Grid>
             </Grid>
             <Grid x:Name="TimesheetGrids" Visibility="Collapsed" Grid.Column="4" Margin="0,-15,0,15">
